samples/_failures_safe/1761464205_39f5f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a3c9a189.c: In function ‘main’:
./samples/SAFE/__tmp_a3c9a189.c:154:9: error: expected declaration or statement at end of input
  154 |         }
      |         ^
./samples/SAFE/__tmp_a3c9a189.c:154:9: error: expected declaration or statement at end of input
